src/golden/functions/typeerrors/test.golden/recursionerrors.fl

	r1 x = r1 42 + r2 x
	
	r2 x = r2 x ++ r1 x